# StrategyGame

./: .gitlab-ci.yml  CMakeLists.txt  README.md  main.cpp
include/: Army.h  AttackReport.h  Format.h  Player.h  Squad.h  Unit.h  UnitFactory.h  UnitSet.h
include/alloys/: AlloysPlayer.h
include/alloys/alloys_factories/: OreMine.h  SteelPlant.h
include/alloys/alloys_units/: CrudeWarrior.h  OreSoldier.h
include/gems/: GemsPlayer.h
include/gems/gems_factories/: CobbleMine.h  GraniteQuarry.h  GraniteQuerry.h
include/gems/gems_units/: CobbleSoldier.h  GraniteWarrior.h
include/gems_units/: CobbleSoldier.h
src/: Army.cpp  Format.cpp  Squad.cpp
src/factories/: CMakeLists.txt  CobbleMine.cpp
src/factories/alloys/: OreMine.cpp  SteelMine.cpp  SteelPlant.cpp
src/factories/gems/: CobbleMine.cpp  GraniteQuarry.cpp  GraniteQuerry.cpp
src/fractions/: CMakeLists.txt  GemsPlayer.cpp  Player.cpp
src/fractions/alloys/: AlloysPlayer.cpp
src/fractions/gems/: GemsPlayer.cpp
src/units/: CMakeLists.txt  CobbleSoldier.cpp  Unit.cpp
src/units/alloys/: CrudeWarrior.cpp  OreSoldier.cpp
src/units/gems/: CobbleSoldier.cpp  GraniteWarrior.cpp
